src/test/resources/fail/CustomOperator_01x.groovy
def "`>?`"(int a, int b) {
    return Math.max(a, b);
}
